--- a/static/css/analysis.css
+++ b/static/css/analysis.css
@@ -1,385 +1,17 @@
-body {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-}
-.top-title{
-    width: 100%;
-    height:10px;
-    background: #009AC9;
-
-    display: flex;
-}
-
-.navigation-bar-container{
-    width: 100%;
-    height: 20%;
-    position: relative;
-    display: flex;
-
-}
-.navigation-bar-top{
-    width: 100%;
-    height: 65px;
-    background: #eeeeee;
-    justify-content: space-between;
-    align-items: center;
-    display: flex;
-}
-.search-container{
-    height: 100%;
-    width: 60%;
-    align-items: center;
-    justify-content: center;
-    justify-items: center;
-    display: flex;
-    margin-left: 20%;
-}
-
-.info-panels {
-    --color-icon: #fff;
-    --color-input: #ccc;
-    --color-border: #9e9e9e;
-    --color-border-hover: #1a73e8;
-    --all-transition: all .2s ease-out;
-    --input-focus-opacity: .3;
-    width: 100%;
-}
-.input-color-group-one {
-    position: relative;
-}
-.search-input {
-    width: 60%;
-    border: 1.5px solid #00467F;
-    border-radius: 30px;
-    background: white;
-    margin-left: 20%;
-    font-size: 1rem;
-    transition: var(--all-transition);
-    height: 30px;
-    min-width: 120px;
-    padding: 4px;
-}
-.search-input::placeholder {
-    font-size: 13px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: #2e2e2e;
-}
-.search-input:focus {
-    color: var(--color-input);
-    outline: none;
-    border: 1.5px solid var(--color-border-hover);
-}
-.search-input:valid {
-    color: #00467F;;
-    outline: none;
-}
-.search-input::-webkit-input-placeholder {
-    color: var(--color-input);
-}
-.search-input::-moz-input-placeholder {
-    color: var(--color-input);
-}
-.search-input::-ms-input-placeholder {
-    color: var(--color-input);
-}
-.search-input:focus::-webkit-input-placeholder, .search-input:valid::-webkit-input-placeholder {
-    opacity: var(--input-focus-opacity);
-}
-.search-input:focus::-moz-input-placeholder, .search-input:valid::-moz-input-placeholder {
-    opacity: var(--input-focus-opacity);
-}
-.search-input:focus::-ms-input-placeholder, .search-input:valid::-ms-input-placeholder {
-    opacity: var(--input-focus-opacity);
-}
-.search-label {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #ffffff;
-    padding: 0 5px;
-    border: 1.5px solid #00467F;
-    border-radius: 20px;
-    top: -9px;
-    left: 25%;
-    background-color: #00467F;
-    cursor: default;
-    backdrop-filter: blur(10px);
-    transition: var(--all-transition);
-    font-size: 12px;
-}
-
-.search-input:focus ~ .color-label, .search-input:valid ~ .search-label {
-    color: var(--color-border-hover);
-    border: 1.5px solid var(--color-border-hover);
-}
-.search-button {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 35px;
-    height: 35px;
-    border: 1.5px solid #ffffff;
-    border-radius: 50%;
-    top: -13px;
-    right: 25%;
-    left: 70%;
-    background-color: transparent;
-    background: #00467F;
-    cursor: pointer;
-    backdrop-filter: blur(10px);
-    transition: var(--all-transition);
-}
-.search-button:hover {
-    background-color: #C4362E;
-    transform: scale(1.2);
-}
-.search-button:active {
-    transform: scale(1.1);
-}
-.search-input:focus ~ .search-button {
-    border: 1.5px solid #C4362E;
-}
-.search-input:valid .search-input:focus ~ .search-button  {
-    border: 1.5px solid #C4362E;
-}
-.search-input:focus ~ .search-button:hover {
-    background-color: #C4362E;
-}
-.search-button:hover {
-    fill: var(--color-icon);
-}
-.search-input:focus ~ .search-button {
-    fill: var(--color-border-hover);
-}
-.search-input:focus ~ .search-button:hover #icon-btn-copy, .search-input:valid ~ .search-button:hover{
-    fill: var(--color-icon);
-}
-
-
-.login-container{
-    width: 60px;
-    height: 60px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    position: relative;
-    right: 5%;
-}
-.sign-icon {
-    margin-top: 10px;
-}
-.sign-icon i {
-    transition: color 0.3s;
-    color: #00467F;
-}
-.sign-text {
-    margin-top: 1px;
-    font-size: 14px;
-    transition: color 0.3s;
-}
-
-.login-container:hover .sign-icon i {
-    color: #C4362E;
-}
-
-.login-container:hover .sign-text {
-    color: #C4362E;
-}
-
-.sign-in-content {
-    /*display: none;*/
-    width: 250px;
-    min-width: 100px;
-    background: white;
-    border: 1px solid #00467F;
-    top: 105px;
-    right: 13%;
-    z-index: 3;
-    box-shadow: 0px 5px 10px rgba(0,0,0,0.1);
-    position: fixed;
-    display: none;
-    animation: slide-bottom 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-}
-
-.hide-content {
-    display: none !important;
-}
-@keyframes slide-bottom {
-    0% {
-        transform: translateY(-20px);
-    }
-    100% {
-        transform: translateY(0);
-    }
-}
-
-.content-triangle {
-    width: 0;
-    height: 0;
-    border-left: 20px solid transparent;
-    border-right: 20px solid transparent;
-    border-bottom: 20px solid #00467F;
-    position: absolute;
-    top: -15px;
-    left: 80%;
-    transform: translateX(-50%);
-}
-
-.content-section {
-    padding-top:7.5px;
-    padding-left: 15px;
-    display: flex;
-    margin-bottom: 0;
-    height: 30px;
-    font-size: 14px;
-    color: #00467F;
-
-}
-
-.divider {
-    width: 100%;
-    border: 0;
-    border-top: 1px solid #cccccc;
-    margin: 0;
-}
-#show-name{
-    background: #00467F;
-    color: white;
-    width: 100%;
-    box-sizing: border-box;
-    padding-top: 5px;
-
-}
-.fa-right{
-    margin-left: 20%;
-    margin-top: 1%;
-    font-size: 10px;
-}
-#change-password:hover, #edit-profile:hover {
-    animation: move-right 0.25s forwards;
-}
-@keyframes move-right {
-    0%{
-        transform: translateX(0px);
-    }
-    25%{
-        transform: translateX(3px);
-    }
-    50%{
-        transform: translateX(6px);
-    }
-    75%{
-        transform: translateX(9px);
-    }
-    100%{
-        transform: translateX(12px);
-    }
-}
-.sign-out-button {
-    width: 55%;
-    height: 35px;
-    border-radius: 15px;
-    font-size: 0.95rem;
-    border: 2px solid #00467F;
-    cursor: pointer;
-    font-weight: bolder;
-    display: inline-block;
-    margin-top: 7px;
-    background: #ffffff;
-}
-.sign-out-button-color{
-    color: #00467F;
-}
-
-.sign-out-button-color:hover{
-    color: #ffffff;
-}
-.sign-out-button-background-color:hover{
-    background-color: #00467F;
-}
-
-.logo {
-    position: absolute;
-    width: 100px;
-    top:20%;
-    height: 100px;
-    background-color: #00467F;
-    left: 5%;
-    clip-path: polygon(25% 0%, 100% 0, 100% 75%, 75% 100%, 0 100%, 0 25%);
-    z-index: 3;
-}
-.language-change {
-    position: relative;
-    right: 3%;
-    cursor: pointer;
-    padding: 0 10px;
-    display: inline-flex;
-    align-items: center;
-    background: #00467F;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    height: 40px;
-    color: #ffffff;
-    font-size: 8px;
-    z-index: 3;
-}
-.language-change:hover{
-    background: #C4362E;
-}
-#language-options {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    border: 1px solid #009AC9; ;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    position: absolute;
-    top: 100%;
-    right: 0;
-    width: 100px;
-    font-size: 1rem;
-    animation: slide-bottom 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-}
-
-#language-options li {
-    padding: 8px;
-    cursor: pointer;
-    border-bottom: 1px solid #e0e0e0;
-    background-color: #ffffff;
-    color: #00467F;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-#language-options li:last-child {
-    border-bottom: none;
-}
-#language-options li:hover {
-    background-color: #00467F;
-    color: white;
-}
-.hidden {
-    display: none;
-}
-
-
 .main{
     flex-grow: 1;
-    width: 100%;
+    width: 95%;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    margin:auto;
 }
 .image-result-container{
     width: 100%;
-    height: 75vh;
+    height: auto;
     min-height: 600px;
-
+    min-width: 420px;
+    justify-content: space-between;
     margin-top: 5vh;
     margin-bottom: 2vh;
     display: flex;
@@ -504,7 +136,7 @@ body {
 }
 .show-result{
     width: 80%;
-    height: 95%;
+    min-height: 800px;
     text-align: center;
     justify-items: center;
     display: flex;
@@ -512,9 +144,21 @@ body {
 
     position: relative;
     align-items: center;
-
 }
 
+@media (max-width: 887px) {
+    .image-result-container{
+        flex-direction: column;
+        align-items: center;
+
+    }
+    .image-show-container,
+    .result-container {
+        width: 80%;
+        min-height: 500px;
+        margin-top: 30px;
+    }
+}
 .warpper-wait{
     width: 180px;
     height: 180px;
