--- a/templates/html/gallery.html
+++ b/templates/html/gallery.html
@@ -209,52 +209,7 @@
             </ul>
         </div>
         <!--log in content-->
-    </div>
-    <div class="navigation-bar-bottom">
-        <div id="mcmenu">
-            <ul>
-                <li id="menu-ahome"><a href="/">Home</a></li>
-                <li class="full-width" id="menu-gallery">
-                    <span>Gallery &nbsp;<i class="fa fa-angle-down" style="font-size:30px"></i></span>
-                    <div class="dropdown">
-                        <div class="clm">
-                            <h3><i class="fa fa-photo" style="font-size:24px"></i>&nbsp;&nbsp;&nbsp;All Images</h3>
-                            <a href="#" onclick="GotoGallery(event)">Default</a>
-                            <a href="#">Sort By Credibility</a>
-                            <a href="#">Sort By Publish Time</a>
-                        </div>
-                        <div class="clm">
-                            <h3><i class="fa fa-star" style="font-size:24px"></i>&nbsp;&nbsp;&nbsp;Truth Images</h3>
-                            <a href="#">Show All</a>
-                            <a href="#">Top 10</a>
-                            <h3><i class="fa fa-star-half-empty" style="font-size:24px"></i>&nbsp;&nbsp;&nbsp;Fake Image</h3>
-                            <a href="#">Show All</a>
-                            <a href="#">Sort By Credibility</a>
-                            <a href="#">Sort By Publish Time</a>
-                        </div>
-                        <div class="clm background-gallery">
-                            <a href="#" ><img src="/static/images/background_gallery.jpeg" style="width:280px"/></a>
-                        </div>
-                    </div>
-                </li>
-                <li id="menu-upload"><a href="/upload">Upload and Analyse</a></li>
-                <li id="menu-help"><a href="/whatwedo">What We Do</a></li>
-                <li id="menu-community">
-                    <span>Help &nbsp;<i class="fa fa-angle-down" style="font-size:30px"></i></span>
-                    <ul class="right0">
-                        <li><a href="https://github.com/Trust-Indicator/Trust-Indicator">Project Landing Page</a></li>
-                        <li><a href="#" onclick="GoToFeedback(event)">Feedback</a></li>
-                        <li><a href="/feedback?source=debug">Report Debug &nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bug-fill" viewBox="0 0 16 16">
-<path d="M4.978.855a.5.5 0 1 0-.956.29l.41 1.352A4.985 4.985 0 0 0 3 6h10a4.985 4.985 0 0 0-1.432-3.503l.41-1.352a.5.5 0 1 0-.956-.29l-.291.956A4.978 4.978 0 0 0 8 1a4.979 4.979 0 0 0-2.731.811l-.29-.956z"/>
-<path d="M13 6v1H8.5v8.975A5 5 0 0 0 13 11h.5a.5.5 0 0 1 .5.5v.5a.5.5 0 1 0 1 0v-.5a1.5 1.5 0 0 0-1.5-1.5H13V9h1.5a.5.5 0 0 0 0-1H13V7h.5A1.5 1.5 0 0 0 15 5.5V5a.5.5 0 0 0-1 0v.5a.5.5 0 0 1-.5.5H13zm-5.5 9.975V7H3V6h-.5a.5.5 0 0 1-.5-.5V5a.5.5 0 0 0-1 0v.5A1.5 1.5 0 0 0 2.5 7H3v1H1.5a.5.5 0 0 0 0 1H3v1h-.5A1.5 1.5 0 0 0 1 11.5v.5a.5.5 0 1 0 1 0v-.5a.5.5 0 0 1 .5-.5H3a5 5 0 0 0 4.5 4.975z"/>
-</svg></a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </div>
     <div class="logo"><img src="{{ url_for('static', filename='images/CredibilitySiginal.png') }}" alt="Trust Indicator Logo"/></div>
-</div>
     <div class="container">
         <button id="toggleSidebar">&#9776;</button>
         <div class="sidebar_image">
@@ -279,12 +234,7 @@
     </div>
     <div class="main-content">
         <div class="photo-gallery">
-            <div class="photo" style="display: none">
-                <div class="photo-indicators">
-                    <div class="indicator"></div>
-                    <div class="indicator"></div>
-                </div>
-            </div>
+
         </div>
     </div>
     <div class="bottom-navigation-bar">
@@ -318,6 +268,15 @@
     <button id="backToTop" title="Go to top" style="font-size: 20px">Top</button>
 </body>
 <script>
+document.addEventListener('DOMContentLoaded', (event) => {
+    document.querySelectorAll('.photo').forEach((element) => {
+        element.style.cursor = 'pointer';
+        element.addEventListener('click', function() {
+            const imageId = this.getAttribute('data-id');
+            window.location.href = `/imagedetail/source=${imageId}`;
+        });
+    });
+});
 document.getElementById('toggleSidebar').addEventListener('click', function() {
     var sidebar = document.querySelector('.sidebar_image');
     if (sidebar.style.transform === 'translateX(0px)') {
