Implement add favourite function.
Signed-off-by: Lingxiu Cai <u7588748@anu.edu.au>

--- a/static/css/imagedetail.css
+++ b/static/css/imagedetail.css
@@ -434,7 +434,7 @@ input:checked + .slider:before {
     background: #4267B2;
 }
 .wrapper .button:nth-child(2):hover .icon{
-    background: #1DA1F2;
+    background: #1ABC9C;
 }
 .wrapper .button:nth-child(3):hover .icon{
     background: #E1306C;
@@ -443,6 +443,9 @@ input:checked + .slider:before {
     background: #333;
 }
 .wrapper .button:nth-child(5):hover .icon{
+    background: #2d79f3;
+}
+.wrapper .button:nth-child(6):hover .icon{
     background: #ff0000;
 }
 .wrapper .button .icon i{
