--- a/static/css/userprofile.css
+++ b/static/css/userprofile.css
@@ -225,7 +225,7 @@ body{
     }
 }
 
-.upload-container {
+.upload-container, .favourite-container{
     width: 80%;
     margin: 0 auto;
     padding: 20px;
