--- a/templates/html/imagedetail.html
+++ b/templates/html/imagedetail.html
@@ -225,6 +225,12 @@
                             </div>
                             <span class="icon-introduce">Twitter</span>
                         </div>
+                        <div class="button" id="favourite-button">
+                            <div class="icon">
+                                <i class="favourite">❤</i>
+                            </div>
+                            <span class="icon-introduce">Favourite</span>
+                        </div>
                     </div>
                 </div>
             </div>
