--- a/templates/html/userprofile.html
+++ b/templates/html/userprofile.html
@@ -222,14 +222,19 @@
                 <br>
                 <div class="section">
                     <h4> Favorite Images</h4>
-                    <div class="upload-container">
+                    <div class="favourite-container" id="no-favourite">
                         <div class="file-drop-area">
                             <button class="upload-btn" onclick="window.location.href='/gallery';">Browse</button>
                         </div>
                     </div>
-                    <div id="favorite-images-container" style="display: none">
-                        <div class="favorite-images">
-                        <!-- Dynamic generation of favorite images -->
+                    <div id="favourite-images-container" style="display: none">
+                        <div class="photo-gallery" id="favourite-images">
+                            <div class="photo" style="display: none">
+                                <div class="photo-indicators">
+                                    <div class="indicator"></div>
+                                    <div class="indicator"></div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
