--- a/static/css/index.css
+++ b/static/css/index.css
@@ -2044,6 +2044,7 @@ html, body {
     background:#333333;
     position: absolute;
     width: 100%;
+
 }
 .connect-table th, .connect-table td {
     padding: 8px;
@@ -2069,7 +2070,7 @@ html, body {
     margin: 0 10px;
     font-family: "Inter", sans-serif;
     color: #ffffff;
-    font-size: 3px;
+    font-size: 10px;
     opacity: 0.7;
 }
 
@@ -2091,7 +2092,7 @@ html, body {
 .slides-container {
     position: relative;
     width: 100%;
-    height: 400px; /* 或者您想要的固定高度 */
+    height: 400px;
     overflow: hidden;
 }
 
@@ -2101,7 +2102,7 @@ html, body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-size: contain; /* 或者 'cover'，视您的需求而定 */
+    background-size: contain;
     background-position: center center;
     background-repeat: no-repeat;
     opacity: 0;
