--- a/templates/html/upload.html
+++ b/templates/html/upload.html
@@ -16,7 +16,7 @@
 <body>
 <div class="page-container">
     <div class="top-title">
-        <p onclick="top_register()">Apply for becoming a membership </p>
+        <p onclick="top_register()"></p>
     </div>
 
     <div class="navigation-bar-container">
