--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -552,8 +552,8 @@
             </div>
         </div>
 
-        <div class="gallery-container2">
-            <h2>Top 10 Fake Images This Week</h2>
+        <div class="gallery-container2" style="width: 100%;height: auto; margin-top:4%">
+            <div>Top 10 Fake Images This Week</div>
             <div id="slider">
                 <div class="slides-container">
                     <!-- Slide images go here -->
