Add delete favourite function. Add recognition method to whatwedo.html

--- a/templates/html/imagedetail.html
+++ b/templates/html/imagedetail.html
@@ -227,7 +227,7 @@
                         </div>
                         <div class="button" id="favourite-button">
                             <div class="icon">
-                                <i class="favourite">❤</i>
+                                <i class="favourite" id="favourite">❤</i>
                             </div>
                             <span class="icon-introduce">Favourite</span>
                         </div>
@@ -336,6 +336,14 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="my-modal-content" id = "myModal">
+        <div class="modal-container">
+            <span class="close" id="myModalClose">&times;</span>
+            <p>Do you want to remove this image from your favorite?</p>
+            <button id="confirmDelete">YES</button>
+            <button id="cancelDelete">NO</button>
         </div>
     </div>
 
