--- a/static/css/imagedetail.css
+++ b/static/css/imagedetail.css
@@ -465,3 +465,83 @@ input:checked + .slider:before {
     text-align: center;
     justify-items: center;
 }
+
+
+.my-modal-content {
+    position: fixed;
+    z-index: 100;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-container {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 50%;
+    max-width: 600px;
+    margin: 200px auto;
+    align-items: center;
+}
+
+@keyframes modalOpen {
+    from {
+        top: -50px;
+        opacity: 0;
+    }
+    to {
+        top: 0;
+        opacity: 1;
+    }
+}
+
+#myModalClose {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+#myModalClose:hover,
+#myModalClose:focus {
+    color: #000;
+    text-decoration: none;
+}
+
+button {
+    background-color: #00467F;
+    color: white;
+    border: none;
+    padding: 12px 24px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 10px;
+    cursor: pointer;
+    transition: background 0.3s, transform 0.3s, box-shadow 0.3s;
+    border-radius: 4px;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.24), 0 2px 10px 0 rgba(0,0,0,0.19);
+}
+
+#confirmDelete:hover {
+    background-color: #4CAF50;
+    color: white;
+    transform: scale(1.05);
+    box-shadow: 0 4px 10px 0 rgba(0,0,0,0.25), 0 4px 20px 0 rgba(0,0,0,0.2);
+}
+
+#cancelDelete:hover {
+    background-color: #f44336;
+    color: white;
+    transform: scale(1.05);
+    box-shadow: 0 4px 10px 0 rgba(0,0,0,0.25), 0 4px 20px 0 rgba(0,0,0,0.2);
+}
