--- a/static/css/userprofile.css
+++ b/static/css/userprofile.css
@@ -125,29 +125,42 @@ body{
 }
 
 .modal {
-    display: none;
     position: fixed;
     z-index: 99;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
     background-color: rgba(0,0,0,0.4);
     justify-content: center;
     align-items: center;
+    display: flex;
 }
 
 .modal-content {
+    margin: 20px auto;
     background-color: #00376B;
-    margin: auto;
-    padding: 20px;
     width: 80%;
+    max-height: 95%;
     max-width: 800px;
-    border-radius: 5px;
+    border-radius: 10px;
     color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+.modal-content-header {
+    height: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
 }
 
+.modal-content-container{
+    overflow: auto;
+    height: 80%;
+}
 .close {
     color: #FFFFFF;
     float: right;
@@ -164,11 +177,14 @@ body{
 
 .modal-options {
     text-align: center;
-    padding-bottom: 15px;
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .modal-options button {
-    background-color: #00467F;
+    background-color: #006B91;
     color: white;
     border: none;
     padding: 12px 24px;
@@ -183,8 +199,16 @@ body{
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.24), 0 2px 10px 0 rgba(0,0,0,0.19);
 }
 
-.modal-options button:hover {
-    background-color: #0080A7;
+#confirmButton:hover {
+    background-color: #4CAF50;
+    color: white;
+    transform: scale(1.05);
+    box-shadow: 0 4px 10px 0 rgba(0,0,0,0.25), 0 4px 20px 0 rgba(0,0,0,0.2);
+}
+
+#cancelButton:hover {
+    background-color: #f44336;
+    color: white;
     transform: scale(1.05);
     box-shadow: 0 4px 10px 0 rgba(0,0,0,0.25), 0 4px 20px 0 rgba(0,0,0,0.2);
 }
@@ -317,9 +341,9 @@ body{
 .section {
     padding-top: 20px;
     margin-top: 10px;
-    background-color: #ffffff; /* 卡片的背景颜色 */
-    border-radius: 8px; /* 卡片的圆角 */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 添加阴影效果，使卡片有浮起的感觉 */
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 100%;
-    height: 500px; /* 卡片的最小高度，可根据需要调整 *//
+    height: 500px;
 }
